--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 }
 
 .modal-content {
+  position: relative;
   display: flex;
   flex-direction: column;
   height: 400px;
@@ -35,4 +36,18 @@
 .modal-input {
   margin-bottom: 35px;
   padding: 10px 20px;
+}
+
+.clear-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  background-color: transparent;
+  border: none;
+  display: block;
+  width: 30px;
+  height: 30px;
+  background-image: url('../image/del.svg');
+  background-size: cover;
+  background-position: center;
 }
