--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@
   display: block;
   width: 30px;
   height: 30px;
-  background-image: url('../image/del.svg');
+  background-image: url("../image/del.svg");
   background-size: cover;
   background-position: center;
 }
@@ -62,4 +62,8 @@
   position: absolute;
   top: 100px;
   right: 100px;
+}
+
+.btn-delete {
+  margin-right: 15px;
 }
